flux/apps/capacitor/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: capacitor
  namespace: default
spec:
  selector: { app: capacitor }
  ports:
    - port: 9000
      targetPort: 9000
