flux/apps/capacitor/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: capacitor
  namespace: default
  annotations:
    tailscale.com/hostname: capacitor
spec:
  ingressClassName: tailscale
  defaultBackend:
    service:
      name: capacitor
      port:
        number: 9000
  tls:
    - hosts: [capacitor]
