flux/apps/capacitor/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: capacitor
  namespace: default
spec:
  podSelector:
    matchLabels:
      app: capacitor
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: tailscale
      ports:
        - port: 9000
          protocol: TCP
  egress:
    - to:
        - ipBlock:
            cidr: 192.168.1.9/32
      ports:
        - port: 6443
          protocol: TCP
